<resources>
    <string name="app_name">Pokemon sw sh nuzlocke tracker</string>
    <string name="slumbering_weald">Slumbering Weald</string>
    <string name="route_01">Route 01</string>
    <string name="route_02">Route 02</string>
    <string name="motostoke">Motostoke</string>
    <string name="route_03">Route 03</string>
    <string name="galar_mine_no_1">Galar Mine No. 1</string>
    <string name="route_04">Route 04</string>
    <string name="route_05">Route 05</string>
    <string name="hulbury">Hulbury</string>
    <string name="galar_mine_no_2">Galar Mine No. 2</string>
    <string name="motostoke_outskirts">Motostoke Outskirts</string>
    <string name="route_06">Route 06</string>
    <string name="glimwood_tangle">Glimwood Tangle</string>
    <string name="route_07">Route 07</string>
    <string name="route_08">Route 08</string>
    <string name="route_09">Route 09</string>
    <string name="route_10">Route 10</string>
</resources>